syntax = "proto3";

option java_multiple_files = true;
option java_package = "ConversationListServiceLib";
option java_outer_classname = "ConversationListServiceProto";

// Note: service name will be the prefix of the gRPC Bean
service ConversationListService {
  rpc saveConversation (saveConversationRequest) returns (saveConversationResponse) {}
}

message saveConversationRequest {
  string username = 1;
  string chatUser = 2;
}

message saveConversationResponse {

}

